Correction flex gap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,12 +43,6 @@ header {
     font-size: .9rem;
 }
 
-nav { 
-    display: flex;
-    column-gap: 1rem;
-    flex-wrap: wrap;
-}
-
 main {
     max-width: 35em;
     margin: auto;
